--- a/spot_cam_ros2/package.xml
+++ b/spot_cam_ros2/package.xml
@@ -15,6 +15,7 @@
   <export>
     <build_type>ament_python</build_type>
     <exec_depend>rclpy</exec_depend>
+    <exec_depend>ros2launch</exec_depend>
     <exec_depend>std_msgs</exec_depend>
     <exec_depend>create_message_types</exec_depend>
 
