--- a/create_message_types/CMakeLists.txt
+++ b/create_message_types/CMakeLists.txt
@@ -7,7 +7,8 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-
+find_package(action_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
@@ -18,6 +19,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/Compositor.srv"
   "srv/Audio.srv"
   "srv/Webrtc.srv"
+  "act/Navigation.action"
+  DEPENDENCIES action_msgs std_msgs
  )
 
 # uncomment the following section in order to fill in
